# LINA

./: ARCHITECTURE.md  BUILD_AND_RUN.md  CMakeLists.txt  LICENSE  LINA  QUICK_START.md  README.md  build.sh  build_desktop.sh  project.properties  run_lina.sh  run_with_api.sh
core/: CMakeLists.txt
core/languages/: ar_SA.json  en_US.json  id_ID.json
core/src/: ai_engine.cpp  ai_engine.h  data_normalizer.cpp  data_normalizer.h  language_manager.cpp  language_manager.h  network_collector.cpp  network_collector.h
desktop/qml/: Main.qml
desktop/src/: main.cpp  main_window.cpp  main_window.h  qml_bridge.cpp  qml_bridge.h
desktop_py/: README.md  ai_engine.py  bridge.py  collector.py  main.py  normalizer.py  requirements.txt
desktop_py/lang/: ar_SA.json  en_US.json  id_ID.json
